fix : doors overflow

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
     position: absolute;
     bottom: 0;
     left: 0;
+    overflow: hidden; /* Hide the door overflow */
     transition: transform 2s;
 }
 
@@ -92,8 +93,7 @@ body {
     left: 4%; 
 }
 
-
-.button{
+.button {
     position: absolute;
     transform: translateX(-50%);
     padding: 10px;
@@ -111,7 +111,7 @@ body {
 }
 
 .ground-floor .button1 {
-   left: 8%;
+    left: 8%;
 }
 
 .top-floor .button {
@@ -142,14 +142,11 @@ body {
         height: 100px;
     }
 
-    
-
-    .button{
+    .button {
         padding: 8px;
         left: 70px;
         margin-left: 0;
         margin-top: 9%;
-
     }
 
     .button1 {
@@ -157,16 +154,13 @@ body {
         left: 6%; 
         margin-left: 0; 
         margin-top: 9%;
-
-        
     }
-
 
     .ground-floor .button1 {
         left: 12%;
-     }
+    }
      
-     .top-floor .button {
-         left: 13%;
-     }
+    .top-floor .button {
+        left: 13%;
+    }
 }
